# API-Drift-Sentinel

./: .gitignore  README.md  pyproject.toml
examples/: sources.yaml
src/api_drift_sentinel/: __init__.py  __main__.py  actions.py  alerts.py  cli.py  config.py  diffing.py  fetchers.py  intelligence.py  models.py  proofs.py  reports.py  scheduler.py  server.py  services.py  storage.py
tests/: test_cli.py  test_diffing.py  test_platform.py
tests/fixtures/: openapi_after.yaml  openapi_before.yaml  page_after.html  page_before.html
